Add info section markup and style

--- a/index.html
+++ b/index.html
@@ -42,7 +42,31 @@
       </div>
     </div>
   </header>
-  <main class="main page__main"></main>
+  <main class="main page__main">
+    <section class="section info section__info">
+      <div class="container info__container">
+        <h2 class="heading-secondary info__heading">Some random information</h2>
+        <div class="info__cards">
+          <div class="card">
+            <div class="card__image"></div>
+            <p class="card__text">this is some subtext under an illustration or image</p>
+          </div>
+          <div class="card">
+            <div class="card__image"></div>
+            <p class="card__text">this is some subtext under an illustration or image</p>
+          </div>
+          <div class="card">
+            <div class="card__image"></div>
+            <p class="card__text">this is some subtext under an illustration or image</p>
+          </div>
+          <div class="card">
+            <div class="card__image"></div>
+            <p class="card__text">this is some subtext under an illustration or image</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   <footer class="footer page__footer"></footer>
 </body>
 </html>
