--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
         </div>
       </div>
     </section>
+    <section class="section testimonial section__testimonial">
+      <div class="container testimonial__container">
+        <p class="testimonial__text">
+          This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p class="testimonial__author">- Thor, God of Thunder</p>
+      </div>
+    </section>
   </main>
   <footer class="footer page__footer"></footer>
 </body>
