Add CTA section markup and style

--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
         <p class="testimonial__author">- Thor, God of Thunder</p>
       </div>
     </section>
+    <section class="section cta section__cta">
+      <div class="container cta__container">
+        <div class="cta-box">
+          <div class="cta-box__content-col">
+            <h3 class="heading-tertiary cta-box__heading">Call to action! It's time!</h3>
+            <p class="cta-box__text">Sign up for our product by clicking that button right over there!</p>
+          </div>
+          <button class="btn btn_empty">Sign up</button>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer page__footer"></footer>
 </body>
