Add footer markup and style

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
       </div>
     </section>
   </main>
-  <footer class="footer page__footer"></footer>
+  <footer class="footer page__footer">
+    <p class="footer__text">Copyright &copy; The Odin Project 2023</p>
+  </footer>
 </body>
 </html>
